--- a/bharatiya-culture/bharatiyaculture.html
+++ b/bharatiya-culture/bharatiyaculture.html
@@ -92,7 +92,7 @@
     }
 
     .women-fashion {
-        background-image: url("public/images/womenwear.jpg");
+        background-image: url("../public/images/womenwear.jpg");
         background-size: cover;
         display: flex;
         justify-content: center;
@@ -101,7 +101,7 @@
     }
 
     .Groom-fashion {
-        background-image: url("public/images/menwear1.jpg");
+        background-image: url("../public/images/menwear1.jpg");
         background-size: cover;
         display: flex;
         justify-content: center;
@@ -110,7 +110,7 @@
     }
 
     .Couples-fashion {
-        background-image: url("public/images/marathicouple.jpg");
+        background-image: url("../public/images/marathicouple.jpg");
         background-size: cover;
         display: flex;
         justify-content: center;
@@ -180,7 +180,7 @@
     }
 
     .card1 {
-        background-image: url("public/images/southcouple1.jpg");
+        background-image: url("../public/images/southcouple1.jpg");
         background-size: cover;
         width: 30%;
         height: 450px;
@@ -192,7 +192,7 @@
     }
 
     .card2 {
-        background-image: url("public/images/southcouple2.jpg");
+        background-image: url("../public/images/southcouple2.jpg");
         width: 60%;
         height: 450px;
         background-size: cover;
@@ -253,14 +253,14 @@
     }
 
     .carda1 {
-        background-image: url("public/images/couples1.jpg");
+        background-image: url("../public/images/couples1.jpg");
         width: 60%;
         height: 450px;
         background-size: cover;
     }
 
     .carda2 {
-        background-image: url("public/images/southwomen5.jpg");
+        background-image: url("../public/images/southwomen5.jpg");
         background-size: cover;
         width: 30%;
         height: 450px;
@@ -312,7 +312,7 @@
     }
 
     .h1-nav {
-        background-image: url("public/images/slide4.jpg");
+        background-image: url("../public/images/slide4.jpg");
         background-size: cover;
         text-align: center;
         font-size: 20px;
@@ -368,7 +368,7 @@
     }
 
     .cardb1 {
-        background-image: url("public/images/punjabmen.jpg");
+        background-image: url("../public/images/punjabmen.jpg");
         background-size: cover;
         height: 350px;
         width: 280px;
@@ -420,7 +420,7 @@
     }
 
     .cardb1:hover {
-        background-image: url("public/images/groom2.jpg");
+        background-image: url("../public/images/groom2.jpg");
         background-size: cover;
     }
 
@@ -453,7 +453,7 @@
     }
 
     .cardb2 {
-        background-image: url("public/images/rajastaniwomen1.jpg");
+        background-image: url("../public/images/rajastaniwomen1.jpg");
         background-size: cover;
         height: 350px;
         width: 260px;
@@ -474,12 +474,12 @@
     }
 
     .cardb2:hover {
-        background-image: url("public/images/rajastaniwomen2.jpg");
+        background-image: url("../public/images/rajastaniwomen2.jpg");
         background-size: cover;
     }
 
     .cardb3 {
-        background-image: url("public/images/westbangalmen1.jpg");
+        background-image: url("../public/images/westbangalmen1.jpg");
         background-size: cover;
         height: 350px;
         width: 260px;
@@ -518,12 +518,12 @@
     }
 
     .cardb3:hover {
-        background-image: url("public/images/westbangalmen2.jpg");
+        background-image: url("../public/images/westbangalmen2.jpg");
         background-size: cover;
     }
 
     .cardb4 {
-        background-image: url("public/images/southwomen3.jpg");
+        background-image: url("../public/images/southwomen3.jpg");
         background-size: cover;
         height: 350px;
         width: 260px;
@@ -544,7 +544,7 @@
     }
 
     .cardb4:hover {
-        background-image: url("public/images/southwomen4.jpg");
+        background-image: url("../public/images/southwomen4.jpg");
         background-size: cover;
     }
 
@@ -559,7 +559,7 @@
     }
 
     .cardc1 {
-        background-image: url("public/images/marathiwear4.jpg");
+        background-image: url("../public/images/marathiwear4.jpg");
         background-size: cover;
         height: 350px;
         width: 280px;
@@ -580,12 +580,12 @@
     }
 
     .cardc1:hover {
-        background-image: url("public/images/marathiwear5.jpg");
+        background-image: url("../public/images/marathiwear5.jpg");
         background-size: cover;
     }
 
     .cardc2 {
-        background-image: url("public/images/peshwahi3.jpg");
+        background-image: url("../public/images/peshwahi3.jpg");
         background-size: cover;
         height: 350px;
         width: 260px;
@@ -607,12 +607,12 @@
     }
 
     .cardc2:hover {
-        background-image: url("public/images/peshwahigroom1.jpg");
+        background-image: url("../public/images/peshwahigroom1.jpg");
         background-size: cover;
     }
 
     .cardc3 {
-        background-image: url("public/images/kashmirwomen2.jpg");
+        background-image: url("../public/images/kashmirwomen2.jpg");
         background-size: cover;
         height: 350px;
         width: 260px;
@@ -633,12 +633,12 @@
     }
 
     .cardc3:hover {
-        background-image: url("public/images/kashmirwomen1.jpg");
+        background-image: url("../public/images/kashmirwomen1.jpg");
         background-size: cover;
     }
 
     .cardc4 {
-        background-image: url("public/images/groom1.jpg");
+        background-image: url("../public/images/groom1.jpg");
         background-size: cover;
         height: 350px;
         width: 260px;
@@ -660,7 +660,7 @@
     }
 
     .cardc4:hover {
-        background-image: url("public/images/groom5.jpg");
+        background-image: url("../public/images/groom5.jpg");
         background-size: 90%;
     }
 
@@ -681,7 +681,7 @@
         width: 100%;
         height: 80vh;
         background-repeat: repeat;
-        background-image: url("public/images/groom789.jpg");
+        background-image: url("../public/images/groom789.jpg");
         margin-top: 50px
     }
 
@@ -816,7 +816,7 @@
     }
 
     .cardd1 {
-        background-image: url(public/images/bhartiyakala.jpg);
+        background-image: url(../public/images/bhartiyakala.jpg);
         height: 180px;
         width: 250px;
         margin-right: 10px;
@@ -840,7 +840,7 @@
     }
 
     .cardd2 {
-        background-image: url(public/images/bhartiyaunity.jpg);
+        background-image: url(../public/images/bhartiyaunity.jpg);
 
         height: 180px;
         width: 250px;
@@ -863,7 +863,7 @@
     }
 
     .cardd3 {
-        background-image: url(public/images/banarasisaree.jpg);
+        background-image: url(../public/images/banarasisaree.jpg);
         height: 180px;
         width: 250px;
         margin-right: 10px;
@@ -886,7 +886,7 @@
     }
 
     .cardd4 {
-        background-image: url(public/images/devvastra.jpg);
+        background-image: url(../public/images/devvastra.jpg);
         height: 180px;
         width: 202px;
         margin-right: 10px;
@@ -909,7 +909,7 @@
     }
 
     .cardd5 {
-        background-image: url(public/images/shreenimandadryt3.jpg);
+        background-image: url(../public/images/shreenimandadryt3.jpg);
         height: 180px;
         width: 235px;
         margin-right: 10px;
@@ -932,7 +932,7 @@
     }
 
     .cardd6 {
-        background-image: url(public/images/Farmersbrand.jpg);
+        background-image: url(../public/images/Farmersbrand.jpg);
         height: 180px;
         width: 262px;
         margin-right: 10px;
@@ -1318,7 +1318,7 @@
         <div class="part6">
             <div class="card">
                 <div class="card-header">
-                    <img src="public/images/groomshoes.jpg" align="left" class="card-pic">
+                    <img src="../public/images/groomshoes.jpg" align="left" class="card-pic">
                     <div class="card-subtitle">
                         Groom Mojari</div>
                     <div class="card-title">
@@ -1342,7 +1342,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="public/images/bridejewellary10.jpg" align="left" class="card-pic">
+                    <img src="../public/images/bridejewellary10.jpg" align="left" class="card-pic">
                     <div class="card-subtitle">
                         Bride Wear</div>
                     <div class="card-title">Necklace </div>
@@ -1367,7 +1367,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="public/images/kashmirwomen2.jpg" align="left" class="card-pic">
+                    <img src="../public/images/kashmirwomen2.jpg" align="left" class="card-pic">
                     <div class="cart-subtitle">
                         Bride Wear</div>
                     <div class="card-title">Lehaga
@@ -1394,7 +1394,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <img src="public/images/southwomen2.jpg" align="left" class="card-pic">
+                    <img src="../public/images/southwomen2.jpg" align="left" class="card-pic">
                     <div class="card-subtitle">
                         Bride Jewellery</div>
                     <div class="card-title">Saree</div>
@@ -1420,7 +1420,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <img src="public/images/bridejewellary4.png" align="left" class="card-pic">
+                    <img src="../public/images/bridejewellary4.png" align="left" class="card-pic">
                     <div class="card-subtitle">
                         Bride Jewellery</div>
                     <div class="card-title">Necklace</div>
@@ -1484,12 +1484,12 @@
             </div>
         </div>
         <div class="brands">
-            <div><img class="image1" src="public/images/bhartiyakalasaree.jpg" height="100" width="100"></div>
-            <div><img class="image1" src="public/images/unitysaree.jpg" height="100" width="100"></div>
-            <div><img class="image1" src="public/images/banarasisari1.jpg" height="100" width="100"></div>
-            <div><img class="image1" src="public/images/paithani.jpg" height="100" width="100"></div>
-            <div><img class="image1" src="public/images/shreesaree.jpg" height="100" width="100"></div>
-            <div><img class="image1" src="public/images/farmersaree.jpg" height="100" width="100"></div>
+            <div><img class="image1" src="../public/images/bhartiyakalasaree.jpg" height="100" width="100"></div>
+            <div><img class="image1" src="../public/images/unitysaree.jpg" height="100" width="100"></div>
+            <div><img class="image1" src="../public/images/banarasisari1.jpg" height="100" width="100"></div>
+            <div><img class="image1" src="../public/images/paithani.jpg" height="100" width="100"></div>
+            <div><img class="image1" src="../public/images/shreesaree.jpg" height="100" width="100"></div>
+            <div><img class="image1" src="../public/images/farmersaree.jpg" height="100" width="100"></div>
         </div>
     </section>
     <footer>
