--- a/bharatiya-culture/bhartiyalogin.html
+++ b/bharatiya-culture/bhartiyalogin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-in">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
         crossorigin="anonymous"></script>
     <style>
         .image {
-            background-image: url("public/images/bhartiyaculturesymbol1.jpg");
+            background-image: url("../public/images/bhartiyaculturesymbol1.jpg");
             background-size: 450px;
             width: 480px;
             height: 150px;
@@ -134,7 +134,7 @@
             <p><a href="#"><i class="bi bi-info"></i></a></i>Passwords must be at least 6 characters.</p>
             <div class="para">To verify your number, we will send you a text<br> message with a temporary code. Message
                 and<br>data rates may apply.</div>
-            <button> <a class="nav-link" href="bhartiyaculture.html">Continue</a></button>
+            <button> <a class="nav-link" href="../bharatiya-culture/bharatiyaculture.html">Continue</a></button>
 
             <hr>
             <div>
