--- a/bharatiya-culture/brideaccessories.html
+++ b/bharatiya-culture/brideaccessories.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-in">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
                 margin-right: 50px;
              }
              .card1{
-                background-image: url("public/images/bridejewellary9.jpg");
+                background-image: url("../public/images/bridejewellary9.jpg");
                 background-size: cover;
                 height: 350px;
                 width: 350px;
@@ -68,7 +68,7 @@
             }
 
             .card1:hover{
-               background-image: url("public/images/bridejewellary12.jpg");
+               background-image: url("../public/images/bridejewellary12.jpg");
                background-size: cover;
             }
             .card-subtitle{
@@ -103,7 +103,7 @@
             font-size:20px;
            }
            .card2{
-                background-image: url("public/images/bridejewellary10.jpg");
+                background-image: url("../public/images/bridejewellary10.jpg");
                 background-size: cover;
                 height: 350px;
                 width: 350px;
@@ -135,7 +135,7 @@
             }
 
             .card2:hover{
-               background-image: url("public/images/bridejewellary8.jpg");
+               background-image: url("../public/images/bridejewellary8.jpg");
                background-size: cover;
             }
             .card-subtitle{
@@ -172,7 +172,7 @@
                 margin-right: 50px;
              }
              .card3{
-                background-image: url("public/images/bridejewellary11.jpg");
+                background-image: url("../public/images/bridejewellary11.jpg");
                 background-size: cover;
                 height: 350px;
                 width: 350px;
@@ -219,7 +219,7 @@
             }
 
             .card3:hover{
-               background-image: url("public/images/bridejewellary5.jpg");
+               background-image: url("../public/images/bridejewellary5.jpg");
                background-size: cover;
             }
             .card-subtitle{
