--- a/bharatiya-culture/brides.html
+++ b/bharatiya-culture/brides.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="enin">
 
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Groom</title>
+   <title>Brides</title>
    <link href="public/images/bhartiyaculturesymbol.jpg" rel="shortcut icon">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,7 +24,7 @@
       }
 
       .card1 {
-         background-image: url("public/images/groom10.jpg");
+         background-image: url("../public/images/southwomen2.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -33,7 +33,6 @@
          overflow: hidden;
          cursor: pointer;
          position: relative;
-
       }
 
       #new {
@@ -77,7 +76,7 @@
       }
 
       .card1:hover {
-         background-image: url("public/images/groom11.jpg");
+         background-image: url("../public/images/southwomen4.jpg");
          background-size: cover;
       }
 
@@ -109,17 +108,8 @@
          margin-left: 5px;
       }
 
-      h3 {
-         color: black;
-      }
-
-      .offers {
-         color: red;
-         font-size: 20px
-      }
-
       .card2 {
-         background-image: url("public/images/groom14.jpg");
+         background-image: url("../public/images/aasamwomen.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -155,7 +145,7 @@
       }
 
       .card2:hover {
-         background-image: url("public/images/gujratigroom.jpg");
+         background-image: url("../public/images/asamwomen1.jpg");
          background-size: cover;
       }
 
@@ -198,7 +188,7 @@
       }
 
       .card3 {
-         background-image: url("public/images/groom15.jpg");
+         background-image: url("../public/images/gujratiwomen2.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -250,7 +240,7 @@
       }
 
       .card3:hover {
-         background-image: url("public/images/groomscarf1.jpg");
+         background-image: url("../public/images/gujratiwomen1.jpg");
          background-size: cover;
       }
 
@@ -293,7 +283,7 @@
       }
 
       .card4 {
-         background-image: url("public/images/groom16.jpg");
+         background-image: url("../public/images/bangaliwomen.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -345,7 +335,7 @@
       }
 
       .card4:hover {
-         background-image: url("public/images/groomscarf.jpg");
+         background-image: url("../public/images/bangalwomenwear1.jpg");
          background-size: cover;
       }
 
@@ -379,10 +369,10 @@
 
       a {
          text-decoration: none;
-         color: white;
+         background-color: lightgreen;
+         color: black;
          border-radius: 50px;
-         background-color: purple;
-         padding: 20px;
+         padding: 15px;
       }
    </style>
 </head>
@@ -402,11 +392,9 @@
                      New</div>
                </div>
                <div>
-                  <div class="card-subtitle">Groom Wear</div>
-                  <div class="card-title">North Indian</div>
-                  <div class="card-prise">&#8377<strike><i>6599</i></strike>
-                     <h3>&#8377 5609 <span class="offers">15% OFF</span></h3>
-                  </div>
+                  <div class="card-subtitle">Bride Wear</div>
+                  <div class="card-title">South Indian</div>
+                  <div class="card-prise">&#8377 6599</div>
                </div>
             </div>
             <div>
@@ -422,9 +410,9 @@
                            New</div>
                      </div>
                      <div>
-                        <div class="card-subtitle">Groom Wear</div>
-                        <div class="card-title">Gujrati</div>
-                        <div class="card-prise">&#8377 33499</div>
+                        <div class="card-subtitle">Bride Wear</div>
+                        <div class="card-title">Asam</div>
+                        <div class="card-prise">&#8377 3499</div>
                      </div>
                   </div>
                   <div>
@@ -440,9 +428,9 @@
                                  New</div>
                            </div>
                            <div>
-                              <div class="card-subtitle">Groom Wear</div>
-                              <div class="card-title">North Indian</div>
-                              <div class="card-prise">&#8377 45999</div>
+                              <div class="card-subtitle">Bride Wear</div>
+                              <div class="card-title">Gurjati</div>
+                              <div class="card-prise">&#8377 5999</div>
                            </div>
                         </div>
                         <div>
@@ -458,15 +446,15 @@
                                        New</div>
                                  </div>
                                  <div>
-                                    <div class="card-subtitle">Groom Wear</div>
-                                    <div class="card-title">Peshwa/Marathi</div>
-                                    <div class="card-prise">&#8377 8999</div>
+                                    <div class="card-subtitle">Bride Wear</div>
+                                    <div class="card-title">Bangali</div>
+                                    <div class="card-prise">&#8377 6999</div>
                                  </div>
                               </div>
    </section>
-   <footer>
-      <a href="bhartiyaculture.html" <span class="bi bi-arrow-left-circle-fill"> Home</span></a>
+   <footer><a link="nav-link" href="bhartiyaculture.html"><span class="bi bi-arrow-left-circle-fill"> Home</span></a>
    </footer>
+
 </body>
 
 </html>
