--- a/bharatiya-culture/couples.html
+++ b/bharatiya-culture/couples.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="enin">
 
 <head>
    <meta charset="UTF-8">
@@ -24,7 +24,7 @@
       }
 
       .card1 {
-         background-image: url("public/images/marathicouple1.jpg");
+         background-image: url("../public/images/marathicouple1.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -76,7 +76,7 @@
       }
 
       .card1:hover {
-         background-image: url("public/images/marathiwear3.jpg");
+         background-image: url("../public/images/marathiwear3.jpg");
          background-size: cover;
       }
 
@@ -109,7 +109,7 @@
       }
 
       .card2 {
-         background-image: url("public/images/southcouple3.jpg");
+         background-image: url("../public/images/southcouple3.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -145,7 +145,7 @@
       }
 
       .card2:hover {
-         background-image: url("public/images/southcouple1.jpg");
+         background-image: url("../public/images/southcouple1.jpg");
          background-size: cover;
       }
 
@@ -188,7 +188,7 @@
       }
 
       .card3 {
-         background-image: url("public/images/rajastanicouple2.jpg");
+         background-image: url("../public/images/rajastanicouple2.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -240,7 +240,7 @@
       }
 
       .card3:hover {
-         background-image: url("public/images/rajastanicouple1.jpg");
+         background-image: url("../public/images/rajastanicouple1.jpg");
          background-size: cover;
       }
 
@@ -283,7 +283,7 @@
       }
 
       .card4 {
-         background-image: url("public/images/gujraticouple1.jpg");
+         background-image: url("../public/images/gujraticouple1.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -335,7 +335,7 @@
       }
 
       .card4:hover {
-         background-image: url("public/images/gujraticouple.png");
+         background-image: url("../public/images/gujraticouple.png");
          background-size: cover;
       }
 
