--- a/bharatiya-culture/grooms.html
+++ b/bharatiya-culture/grooms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-in">
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
         }
 
         .card1 {
-            background-image: url("public/images/groom10.jpg");
+            background-image: url("../public/images/groom10.jpg");
             background-size: cover;
             height: 350px;
             width: 280px;
@@ -76,7 +76,7 @@
         }
 
         .card1:hover {
-            background-image: url("public/images/groom11.jpg");
+            background-image: url("../public/images/groom11.jpg");
             background-size: cover;
         }
 
@@ -118,7 +118,7 @@
         }
 
         .card2 {
-            background-image: url("public/images/gujratigroom.jpg");
+            background-image: url("../public/images/gujratigroom.jpg");
             background-size: cover;
             height: 350px;
             width: 280px;
@@ -154,7 +154,7 @@
         }
 
         .card2:hover {
-            background-image: url("public/images/groomscarf.jpg");
+            background-image: url("../public/images/groomscarf.jpg");
             background-size: cover;
         }
 
@@ -197,7 +197,7 @@
         }
 
         .card3 {
-            background-image: url("public/images/groom13.jpg");
+            background-image: url("../public/images/groom13.jpg");
             background-size: cover;
             height: 350px;
             width: 280px;
@@ -249,7 +249,7 @@
         }
 
         .card3:hover {
-            background-image: url("public/images/groom12.jpg");
+            background-image: url("../public/images/groom12.jpg");
             background-size: cover;
         }
 
@@ -292,7 +292,7 @@
         }
 
         .card4 {
-            background-image: url("public/images/peshwahi3.jpg");
+            background-image: url("../public/images/peshwahi3.jpg");
             background-size: cover;
             height: 350px;
             width: 280px;
@@ -344,7 +344,7 @@
         }
 
         .card4:hover {
-            background-image: url("public/images/peshwagroom.jpg");
+            background-image: url("../public/images/peshwagroom.jpg");
             background-size: cover;
         }
 
@@ -387,7 +387,7 @@
         }
 
         .card5 {
-            background-image: url("public/images/gujratiwomen2.jpg");
+            background-image: url("../public/images/gujratiwomen2.jpg");
             background-size: cover;
             height: 350px;
             width: 280px;
