--- a/bharatiya-culture/groom.html
+++ b/bharatiya-culture/groom.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-in">
 
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Brides</title>
+   <title>Groom</title>
    <link href="public/images/bhartiyaculturesymbol.jpg" rel="shortcut icon">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,7 +24,7 @@
       }
 
       .card1 {
-         background-image: url("public/images/southcouple10.jpg");
+         background-image: url("../public/images/groom10.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -33,6 +33,7 @@
          overflow: hidden;
          cursor: pointer;
          position: relative;
+
       }
 
       #new {
@@ -76,7 +77,7 @@
       }
 
       .card1:hover {
-         background-image: url("public/images/southcouple11.jpg");
+         background-image: url("../public/images/groom11.jpg");
          background-size: cover;
       }
 
@@ -108,8 +109,17 @@
          margin-left: 5px;
       }
 
+      h3 {
+         color: black;
+      }
+
+      .offers {
+         color: red;
+         font-size: 20px
+      }
+
       .card2 {
-         background-image: url("public/images/southcouple12.jpg");
+         background-image: url("../public/images/groom14.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -145,7 +155,7 @@
       }
 
       .card2:hover {
-         background-image: url("public/images/southcouple9.jpg");
+         background-image: url("../public/images/gujratigroom.jpg");
          background-size: cover;
       }
 
@@ -188,7 +198,7 @@
       }
 
       .card3 {
-         background-image: url("public/images/southcouple8.jpg");
+         background-image: url("../public/images/groom15.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -240,7 +250,7 @@
       }
 
       .card3:hover {
-         background-image: url("public/images/southcouple7.jpg");
+         background-image: url("../public/images/groomscarf1.jpg");
          background-size: cover;
       }
 
@@ -283,7 +293,7 @@
       }
 
       .card4 {
-         background-image: url("public/images/southcouple5.jpg");
+         background-image: url("../public/images/groom16.jpg");
          background-size: cover;
          height: 350px;
          width: 280px;
@@ -335,7 +345,7 @@
       }
 
       .card4:hover {
-         background-image: url("public/images/southcouple4.jpg");
+         background-image: url("../public/images/groomscarf.jpg");
          background-size: cover;
       }
 
@@ -366,82 +376,97 @@
          color: #ff6f61;
          margin-left: 5px;
       }
+
+      a {
+         text-decoration: none;
+         color: white;
+         border-radius: 50px;
+         background-color: purple;
+         padding: 20px;
+      }
    </style>
 </head>
 
 <body class="container-fluid">
-   <div>
-      <div class="part1">
-         <div class="container">
-            <div class="card1">
-               <div class="buttons">
-                  <span class="bi bi-eye"></span>
-                  <span class="bi bi-cart3"></span>
-                  <span class="bi bi-heart"></span>
-               </div>
-               <div id="new">
-                  New</div>
-            </div>
-            <div>
-               <div class="card-subtitle">Couple Wear</div>
-               <div class="card-title">South Indian</div>
-               <div class="card-prise">&#8377 76599</div>
-            </div>
-         </div>
-         <div>
-            <div class="part1">
-               <div class="container">
-                  <div class="card2">
-                     <div class="buttons">
-                        <span class="bi bi-eye"></span>
-                        <span class="bi bi-cart3"></span>
-                        <span class="bi bi-heart"></span>
-                     </div>
-                     <div id="new">
-                        New</div>
+   <section>
+      <div>
+         <div class="part1">
+            <div class="container">
+               <div class="card1">
+                  <div class="buttons">
+                     <span class="bi bi-eye"></span>
+                     <span class="bi bi-cart3"></span>
+                     <span class="bi bi-heart"></span>
                   </div>
-                  <div>
-                     <div class="card-subtitle">Couple Wear</div>
-                     <div class="card-title">South Indian</div>
-                     <div class="card-prise">&#8377 63499</div>
-                  </div>
+                  <div id="new">
+                     New</div>
                </div>
                <div>
-                  <div class="part3">
-                     <div class="container">
-                        <div class="card3">
-                           <div class="buttons">
-                              <span class="bi bi-eye"></span>
-                              <span class="bi bi-cart3"></span>
-                              <span class="bi bi-heart"></span>
-                           </div>
-                           <div id="new">
-                              New</div>
+                  <div class="card-subtitle">Groom Wear</div>
+                  <div class="card-title">North Indian</div>
+                  <div class="card-prise">&#8377<strike><i>6599</i></strike>
+                     <h3>&#8377 5609 <span class="offers">15% OFF</span></h3>
+                  </div>
+               </div>
+            </div>
+            <div>
+               <div class="part1">
+                  <div class="container">
+                     <div class="card2">
+                        <div class="buttons">
+                           <span class="bi bi-eye"></span>
+                           <span class="bi bi-cart3"></span>
+                           <span class="bi bi-heart"></span>
                         </div>
-                        <div>
-                           <div class="card-subtitle">Couple Wear</div>
-                           <div class="card-title">South Indian</div>
-                           <div class="card-prise">&#8377 95999</div>
-                        </div>
+                        <div id="new">
+                           New</div>
                      </div>
                      <div>
-                        <div class="part4">
-                           <div class="container">
-                              <div class="card4">
-                                 <div class="buttons">
-                                    <span class="bi bi-eye"></span>
-                                    <span class="bi bi-cart3"></span>
-                                    <span class="bi bi-heart"></span>
-                                 </div>
-                                 <div id="new">
-                                    New</div>
+                        <div class="card-subtitle">Groom Wear</div>
+                        <div class="card-title">Gujrati</div>
+                        <div class="card-prise">&#8377 33499</div>
+                     </div>
+                  </div>
+                  <div>
+                     <div class="part3">
+                        <div class="container">
+                           <div class="card3">
+                              <div class="buttons">
+                                 <span class="bi bi-eye"></span>
+                                 <span class="bi bi-cart3"></span>
+                                 <span class="bi bi-heart"></span>
                               </div>
-                              <div>
-                                 <div class="card-subtitle">Couple Wear</div>
-                                 <div class="card-title">South Indian</div>
-                                 <div class="card-prise">&#8377 66999</div>
-                              </div>
+                              <div id="new">
+                                 New</div>
                            </div>
+                           <div>
+                              <div class="card-subtitle">Groom Wear</div>
+                              <div class="card-title">North Indian</div>
+                              <div class="card-prise">&#8377 45999</div>
+                           </div>
+                        </div>
+                        <div>
+                           <div class="part4">
+                              <div class="container">
+                                 <div class="card4">
+                                    <div class="buttons">
+                                       <span class="bi bi-eye"></span>
+                                       <span class="bi bi-cart3"></span>
+                                       <span class="bi bi-heart"></span>
+                                    </div>
+                                    <div id="new">
+                                       New</div>
+                                 </div>
+                                 <div>
+                                    <div class="card-subtitle">Groom Wear</div>
+                                    <div class="card-title">Peshwa/Marathi</div>
+                                    <div class="card-prise">&#8377 8999</div>
+                                 </div>
+                              </div>
+   </section>
+   <footer>
+      <a href="bhartiyaculture.html" <span class="bi bi-arrow-left-circle-fill"> Home</span></a>
+   </footer>
 </body>
 
 </html>
