--- a/bharatiya-culture/southcouples.html
+++ b/bharatiya-culture/southcouples.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-in">
 
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Bride Accessories</title>
+   <title>Brides</title>
    <link href="public/images/bhartiyaculturesymbol.jpg" rel="shortcut icon">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,8 +14,7 @@
       crossorigin="anonymous"></script>
    <style>
       .part1 {
-         height: 60vh;
-         width: 280px;
+         height: 50hv;
          display: grid;
          grid-template-columns: 3fr 3fr 3fr 3fr;
          grid-gap: 30px;
@@ -25,16 +24,15 @@
       }
 
       .card1 {
-         background-image: url("public/images/groomjwellary1.jpg");
+         background-image: url("../public/images/southcouple10.jpg");
          background-size: cover;
-         height: 550px;
-         width: 350px;
+         height: 350px;
+         width: 280px;
          display: flex;
          justify-content: center;
          overflow: hidden;
          cursor: pointer;
          position: relative;
-
       }
 
       #new {
@@ -78,7 +76,7 @@
       }
 
       .card1:hover {
-         background-image: url("public/images/groomjwellary2.jpg");
+         background-image: url("../public/images/southcouple11.jpg");
          background-size: cover;
       }
 
@@ -110,20 +108,11 @@
          margin-left: 5px;
       }
 
-      h3 {
-         color: black;
-      }
-
-      .offers {
-         color: red;
-         font-size: 20px;
-      }
-
       .card2 {
-         background-image: url("public/images/groom-brooch1.jpg");
+         background-image: url("../public/images/southcouple12.jpg");
          background-size: cover;
-         height: 550px;
-         width: 350px;
+         height: 350px;
+         width: 280px;
          display: flex;
          justify-content: center;
          overflow: hidden;
@@ -156,7 +145,7 @@
       }
 
       .card2:hover {
-         background-image: url("public/images/groombroch1.jpg");
+         background-image: url("../public/images/southcouple9.jpg");
          background-size: cover;
       }
 
@@ -199,10 +188,10 @@
       }
 
       .card3 {
-         background-image: url("public/images/groomscarf.jpg");
+         background-image: url("../public/images/southcouple8.jpg");
          background-size: cover;
-         height: 550px;
-         width: 350px;
+         height: 350px;
+         width: 280px;
          display: flex;
          justify-content: center;
          overflow: hidden;
@@ -251,7 +240,102 @@
       }
 
       .card3:hover {
-         background-image: url("public/images/groomscarf1.jpg");
+         background-image: url("../public/images/southcouple7.jpg");
+         background-size: cover;
+      }
+
+      .card-subtitle {
+         font-size: 12px;
+         color: gray;
+         font-family: arial;
+         margin-top: 20px;
+         margin-bottom: 5px;
+      }
+
+      .card-title {
+         font-size: 15px;
+         font-weight: bold;
+         font-family: arial;
+         margin-bottom: 5px;
+      }
+
+      .card-prise {
+         font-size: 15px;
+         color: gray;
+         font-weight: bold;
+      }
+
+      .real-prise {
+         font-weight: bold;
+         font-size: 17px;
+         color: #ff6f61;
+         margin-left: 5px;
+      }
+
+      .part4 {
+         height: 50hv;
+         display: grid;
+         grid-template-columns: 3fr 3fr 3fr 3fr;
+         grid-gap: 30px;
+         margin-top: 50px;
+         margin-left: 50px;
+         margin-right: 50px;
+      }
+
+      .card4 {
+         background-image: url("../public/images/southcouple4.jpg");
+         background-size: cover;
+         height: 350px;
+         width: 280px;
+         display: flex;
+         justify-content: center;
+         overflow: hidden;
+         cursor: pointer;
+         position: relative;
+      }
+
+      #new {
+         background-color: white;
+         width: 50px;
+         height: 20px;
+         text-align: center;
+         padding: 2px;
+         display: flex;
+         align-items: center;
+         position: absolute;
+         top: 30px;
+         left: 0px;
+         font-weight: bold;
+         font-family: arial;
+         font-size: 15px;
+      }
+
+      .card4 .buttons {
+         margin-top: 150%;
+         transition: 1s;
+      }
+
+      .card4:hover .buttons {
+         margin-top: 90%;
+         transition: 1s;
+      }
+
+      .buttons span {
+         margin-right: 5px;
+         background-color: white;
+         padding: 10px;
+         border-radius: 30px;
+         text-align: center;
+      }
+
+      .buttons span:hover {
+         cursor: pointer;
+         color: white;
+         background-color: #ff6f61;
+      }
+
+      .card4:hover {
+         background-image: url("../public/images/southcouple4.jpg");
          background-size: cover;
       }
 
@@ -299,11 +383,9 @@
                   New</div>
             </div>
             <div>
-               <div class="card-subtitle">Groom</div>
-               <div class="card-title">Moti Mala</div>
-               <div class="card-prise">&#8377<strike><i>6599</i></strike>
-                  <h3>&#8377 5807 <span class="offers">12% OFF</span></h3>
-               </div>
+               <div class="card-subtitle">Couple Wear</div>
+               <div class="card-title">South Indian</div>
+               <div class="card-prise">&#8377 76599</div>
             </div>
          </div>
          <div>
@@ -319,9 +401,9 @@
                         New</div>
                   </div>
                   <div>
-                     <div class="card-subtitle">Groom</div>
-                     <div class="card-title">Broach</div>
-                     <div class="card-prise">&#8377 3499</div>
+                     <div class="card-subtitle">Couple Wear</div>
+                     <div class="card-title">South Indian</div>
+                     <div class="card-prise">&#8377 63499</div>
                   </div>
                </div>
                <div>
@@ -337,13 +419,29 @@
                               New</div>
                         </div>
                         <div>
-                           <div class="card-subtitle">Groom Wear Scarf </div>
-                           <div class="card-title">Designer</div>
-                           <div class="card-prise">&#8377 10999</div>
+                           <div class="card-subtitle">Couple Wear</div>
+                           <div class="card-title">South Indian</div>
+                           <div class="card-prise">&#8377 95999</div>
                         </div>
                      </div>
                      <div>
-
+                        <div class="part4">
+                           <div class="container">
+                              <div class="card4">
+                                 <div class="buttons">
+                                    <span class="bi bi-eye"></span>
+                                    <span class="bi bi-cart3"></span>
+                                    <span class="bi bi-heart"></span>
+                                 </div>
+                                 <div id="new">
+                                    New</div>
+                              </div>
+                              <div>
+                                 <div class="card-subtitle">Couple Wear</div>
+                                 <div class="card-title">South Indian</div>
+                                 <div class="card-prise">&#8377 66999</div>
+                              </div>
+                           </div>
 </body>
 
 </html>
