--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 </ul>
             </div>
             <div class="nav-button">
-                <a href="../ui-portfolio/resume.html" download=""> <button class="btn uil uil-file-alt">Download CV</button></a>
+                <a href="../ui-portfolio/resume.html" download=""> <button class="btn uil uil-file-alt">Download
+                        CV</button></a>
 
             </div>
             <div class="nav-menu-btn">
@@ -75,7 +76,8 @@
                     </div>
                     <div class="social_icons">
                         <div class="icon"><a class="bi bi-telephone-fill" href="tel:+91851780927"></a></div>
-                        <div class="icon"><a class="bi bi-linkedin" href="https://www.instagram.com/patilro_hit?igsh=MWpzOG83M3lyMXlyNw=="
+                        <div class="icon"><a class="bi bi-linkedin"
+                                href="https://www.instagram.com/patilro_hit?igsh=MWpzOG83M3lyMXlyNw=="
                                 target="_blank"></a></div>
                         <div class="icon"><a class="bi bi-envelope-fill" href="mailto:rohitpatil15121998@gmail.com"></a>
                         </div>
@@ -168,23 +170,44 @@
                 </div>
                 <div class="project-container">
                     <div class="project-box">
-                        <img src="../ui-portfolio/public/images/bhartiyaculturesymbol1.jpg" width="260px" height="140px">
+                        <img src="../ui-portfolio/public/images/bhartiyaculturesymbol1.jpg" width="260px"
+                            height="140px">
                         <p>Bharatiya Culture</p>
-
                     </div>
                     <div class="project-box">
                         <img src="../ui-portfolio/public/images/Farmersbrand.jpg" width="180px" height="140px">
                         <p>Farmers Brand</p>
-
                     </div>
                     <div class="project-box">
                         <img src="../ui-portfolio/public/images/bhartiyaunity1.jpg" width="200px" height="120px">
                         <p>Bharatiya Unity</p>
-
                     </div>
-                    <button class="btn bi bi-arrow-right"><a href="../ui-portfolio/bharatiya-culture/bhartiyalogin.html"> Click</a></button>
-                    <button class="btn bi bi-arrow-right"><a href="../ui-portfolio/farmes-brand/farmers-brand.html"> Click</a></button>
-                    <button class="btn bi bi-arrow-right"><a href="../ui-portfolio/bharatiya-unity/bharatiya-unity.html"> Click</a></button>
+
+                    <div class="project-box">
+                        <img src="../ui-portfolio/public/images/rajasthani-hotel.png" width="260px" height="140px">
+                        <p>Royal Rajasthan Hotel</p>
+                    </div>
+                    <div class="project-box">
+                        <img src="../ui-portfolio/public/images/video-library1.jpg" width="260px" height="140px">
+                        <p>Video Library</p>
+                    </div>
+                    <div class="project-box">
+                        <img src="../ui-portfolio/public/images/to-do1.jpg" width="260px" height="140px">
+                        <p>To-Do Appointment</p>
+                    </div>
+                    <button class="btn bi bi-arrow-up"><a href="../ui-portfolio/bharatiya-culture/bhartiyalogin.html">
+                            Click</a></button>
+                    <button class="btn bi bi-arrow-down"><a href="../ui-portfolio/hotel-booking/rajasthan-hotel.html">
+                            Click</a></button>
+                    <button class="btn bi bi-arrow-up"><a href="../ui-portfolio/farmes-brand/farmers-brand.html">
+                            Click</a></button>
+                    <button class="btn bi bi-arrow-down"><a href="../ui-portfolio/video-library/video-library.html">
+                            Click</a></button>
+                    <button class="btn bi bi-arrow-up"><a href="../ui-portfolio/bhartiya-unity/bhartiya-unity.html">
+                            Click</a></button>
+                    <button class="btn bi bi-arrow-down"><a href="">
+                            Click</a></button>
+
                 </div>
             </section>
 
@@ -246,8 +269,9 @@
             </div>
             <div class="footer-social-icons">
                 <div class="icon"><a class="bi bi-telephone-fill" href="tel:+918517809277"></a></div>
-                <div class="icon"><a class="bi bi-linkedin" href="https://www.instagram.com/patilro_hit?igsh=MWpzOG83M3lyMXlyNw=="
-                        target="_blank"></a></div>
+                <div class="icon"><a class="bi bi-linkedin"
+                        href="https://www.instagram.com/patilro_hit?igsh=MWpzOG83M3lyMXlyNw==" target="_blank"></a>
+                </div>
                 <div class="icon"><a class="bi bi-envelope-fill" href="mailto:rohitpail15121998@gmail.com"></a></div>
                 <div class="icon"><a class="bi bi-github" href="https://rohit-patil15.github.io/ui-portfolio/"
                         target="_blank"></a></div>
