--- a/bharatiya-culture/bhartiyalogin.html
+++ b/bharatiya-culture/bhartiyalogin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>भारतीय CULTURE</title>
+    <link href="../public/images/bhartiyaculturesymbol.jpg" rel="shortcut icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -34,7 +35,7 @@
         input {
             width: 100%;
             height: 32px;
-            +border-radius: 2px;
+            border-radius: 2px;
             border: 1px solid gray;
             margin-bottom: 17px;
             margin-top: 4px;
