--- a/video-library/video-library.html
+++ b/video-library/video-library.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmers Brand</title>
-    <link href="../public/images/favicon.ico" rel="shortcut icon">
+    <title>Video Library</title>
+    <link href="../public/images/video-library.jpg" rel="shortcut icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -14,9 +14,8 @@
    <style>
     body{
        
-        background-image: url('../public/images/Farmersbrand.jpg');
+        background-image: url('../public/images/video-library.jpg');
         background-repeat: no-repeat;
-        background-size: 800px;
     }
     .heading{
         font-style:oblique;
