--- a/resume.html
+++ b/resume.html
@@ -119,7 +119,7 @@
                 <h6>WORK EXPERIENCE <span>(Personal Projects)</span></h6>
                 <hr style="width:330px; color:blue;">
                 <ol type="1">
-                    <li style="color:rgb(42, 104, 197);">Bharatiya Culture</li>
+                    <li style="color:rgb(42, 104, 197);">Personal Projects : </li>
                     <ul>
                         <li>Developed a responsive website for Shopping where user can see images and pattern of indian
                             cultures,Delivery & Online Payments option follow us.</li>
@@ -134,13 +134,16 @@
                     <span style="color:rgb(42, 104, 197); font-size:14px;">Technology Used :</span>
                     <p class="ps-4">Frontend : HTML, CSS, JAVASCRIPT,JQUERY, BOOTSTRAP</p>
                     <p class="ps-4">Backend : NodeJS, ExpressJS & MongoDB</p>
-                    <span style="color:blue; font-size:14px;">Personal Projects : </span></span>
+                    <span style="color:blue; font-size:14px;"></span></span>
                     <a class="nav-link" href="bhartiyalogin.html">
                         <li>Bharatiya Culture</li>
                     </a>
                     <a class="nav-link" href="bhartiyaculture.html">
                         <li>Natural Foods</li>
                     </a>
+                    <a><li>Royal Rajastan Hotel</li></a>
+                    <a><li>Video Library</li></a>
+                    <a><li>To-Do Appointment</li></a>
                 </div>
             </div>
             <div>
@@ -176,7 +179,7 @@
                     knowledge.</p>
             </div>
             <div class="d-flex justify-content-between mt-5" style="font-size:15px;">
-                <div>Date:</div>
+                <div>Date:01-04-2024</div>
                 <div>
                     <span>Place:Ameerpet,Hydrabad</span><br>
                     <span>Rohit Patil</span>
