--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="featured-text-btn">
                         <button class="btn blue-btn">Hire Me</button>
-                        <a href="../ui-portfolio/resume.html" download=""> <button class="btn uil uil-import">Download
+                        <a href="../ui-portfolio/public/document/rohit-resume.pdf" download=""> <button class="btn uil uil-import">Download
                                 CV</button></a>
                     </div>
                     <div class="social_icons">
