--- a/resume.html
+++ b/resume.html
@@ -91,6 +91,18 @@
                         <li>Testing with JEST</li>
                     </ul>
                 </ol>
+                <ol class="pt-1">
+                    5. Word Press
+                    <ul class="pt-1">
+                       <li>Domain & Web Hosting</li>
+                       <li>Plugins</li>
+                       <li>Creating Home page</li> 
+                       <li>Designing home page</li>
+                       <li>Dashbord</li>
+                       <li>Styles</li>
+                      
+                    </ul>
+                </ol>
             </div>
             <h6 class="mt-2 mb-1">FLUENT LANGUAGES</h6>
             <div class="fluent-card">
