--- a/hotel-booking/rajasthan-hotel.html
+++ b/hotel-booking/rajasthan-hotel.html
@@ -12,98 +12,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-  <style>
-    .text-light {
-      font-weight: bold;
-      padding-top: 10px;
-    }
-
-    dd {
-      display: flex;
-    }
-
-    body {
-      background-image: url('../public/images/rajastanihotelbanner.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-    }
-
-    .nav-link {
-      color: blue;
-    }
-  </style>
-  <script>
-    function RegisterClick() {
-      document.getElementById("lblName").innerHTML = document.getElementById("txtNm").value;
-      document.getElementById("lblDate").innerHTML = document.getElementById("Date").value;
-      document.getElementById("lblDays").innerHTML = document.getElementById("NumberDays").value;
-      document.getElementById("lblpersons").innerHTML = document.getElementById("NumberPerson").value;
-      document.getElementById("lblAmount").innerHTML = document.getElementById("txtAmnt").value;
-      var RoomName = "";
-      var RoomCost = 0;
-      var Imgroom = document.getElementById("Imgroom");
-
-
-      var PrinceRoom = document.getElementById("PrinceRoom");
-      var RoyalRoom = document.getElementById("RoyalRoom");
-
-      if (PrinceRoom.checked) {
-        RoomName = PrinceRoom.value;
-        RoomCost = 5000;
-        Imgroom.src = "../public/images/hotelroom2.jpg";
-      }
-      if (RoyalRoom.checked) {
-        RoomName = RoyalRoom.value;
-        RoomCost = 6000;
-        Imgroom.src = "../public/images/hatelroom1.jpg";
-      }
-      var AmenitiesName = "";
-      var AmenitiesCost = 0;
-
-      var ACRoom = document.getElementById("Hotel Out-Side");
-      var HotelHoll = document.getElementById("HotelHoll");
-
-      if (ACRoom.checked) {
-        AmenitiesName += ACRoom.value;
-        AmenitiesCost = 7000;
-        RoomCost += AmenitiesCost;
-
-      }
-      if (HotelHoll.checked) {
-        AmenitiesName += HotelHoll.value;
-        AmenitiesCost = 8000;
-        RoomCost += AmenitiesCost;
-
-      }
-
-      document.getElementById("lblRooms").innerHTML = RoomName;
-      document.getElementById("lblAmen").innerHTML = AmenitiesName;
-      document.getElementById("lblTotal").innerHTML = RoomCost.toLocaleString(`en-in`, { style: `currency`, currency: `INR` });
-
-
-      var days = document.getElementById("NumberDays").value;
-      var person = document.getElementById("NumberPerson").value;
-      var AdvanceAmount = document.getElementById("txtAmnt").value;
-
-
-
-      var total = 0;
-      var lblTotal = 0;
-      if (person > 2) {
-        total += (RoomCost * days) + person * 1000;
-        lblTotal = total - AdvanceAmount;
-      } else {
-        total += RoomCost * days;
-        lblTotal = total - AdvanceAmount;
-        alert(total);
-      }
-
-
-      document.getElementById("lblTotal").innerHTML = lblTotal.toLocaleString(`en-in`, { style: `currency`, currency: `INR` });
-
-    }
-  </script>
-
+        <link rel="stylesheet" href="../src/styles/rajasthan-hotel.css">
+        <script>
+          function RegisterClick(){document.getElementById("lblName").innerHTML=document.getElementById("txtNm").value;document.getElementById("lblDate").innerHTML=document.getElementById("Date").value;document.getElementById("lblDays").innerHTML=document.getElementById("NumberDays").value;document.getElementById("lblpersons").innerHTML=document.getElementById("NumberPerson").value;document.getElementById("lblAmount").innerHTML=document.getElementById("txtAmnt").value;var RoomName="";var RoomCost=0;var Imgroom=document.getElementById("Imgroom");var PrinceRoom=document.getElementById("PrinceRoom");var RoyalRoom=document.getElementById("RoyalRoom");if(PrinceRoom.checked){RoomName=PrinceRoom.value;RoomCost=5000;Imgroom.src="../public/images/hotelroom2.jpg"}
+if(RoyalRoom.checked){RoomName=RoyalRoom.value;RoomCost=6000;Imgroom.src="../public/images/hatelroom1.jpg"}
+var AmenitiesName="";var AmenitiesCost=0;var ACRoom=document.getElementById("Hotel Out-Side");var HotelHoll=document.getElementById("HotelHoll");if(ACRoom.checked){AmenitiesName+=ACRoom.value;AmenitiesCost=7000;RoomCost+=AmenitiesCost}
+if(HotelHoll.checked){AmenitiesName+=HotelHoll.value;AmenitiesCost=8000;RoomCost+=AmenitiesCost}
+document.getElementById("lblRooms").innerHTML=RoomName;document.getElementById("lblAmen").innerHTML=AmenitiesName;document.getElementById("lblTotal").innerHTML=RoomCost.toLocaleString(`en-in`,{style:`currency`,currency:`INR`});var days=document.getElementById("NumberDays").value;var person=document.getElementById("NumberPerson").value;var AdvanceAmount=document.getElementById("txtAmnt").value;var total=0;var lblTotal=0;if(person>2){total+=(RoomCost*days)+person*1000;lblTotal=total-AdvanceAmount}else{total+=RoomCost*days;lblTotal=total-AdvanceAmount;alert(total)}
+document.getElementById("lblTotal").innerHTML=lblTotal.toLocaleString(`en-in`,{style:`currency`,currency:`INR`})}
+        </script>
 </head>
 
 <body background="../public/images/hatelroom1.jpg" class="container-fluid">
