--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <style>
-        .details,body{box-shadow:5px 5px 5px gray}.address-content,p,ul{font-size:15px}body,p,ul{font-family:serif}body{margin-right:250px;margin-top:30px;margin-bottom:30px;width:100vh}.header{display:flex;justify-content:space-between;padding:15px}.title-color,h6{color:#2a68c5;font-weight:700}.details{display:grid;grid-template-columns:4fr 8fr}.education-head{color:#000}.expertise{background-color:#d3d3d3;padding:20px}.fluent-card,.tech-expertice-card{background-color:#fff}
-    </style>
+    <link rel="stylesheet" href="./src/styles/resume.css">
 </head>
 
 <body class="border">
