--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                         <p>Farmers Brand</p>
                     </div>
                     <div class="project-box">
-                        <img src="../ui-portfolio/public/images/bhartiyaunity1.jpg" width="200px" height="120px">
-                        <p>Bharatiya Unity</p>
+                        <img src="../ui-portfolio/public/images/moviebanner3.jpg" width="200px" height="120px">
+                        <p>Movie Ticket Booking</p>
                     </div>
 
                     <div class="project-box">
